--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <!--Past Searches Box-->
             <div class="pastSearched">
-                <h3>Past Searches</h3>
+                <h3>Search History</h3>
                 <ul class="list-group list-group-flush">
                 </ul>
             </div>
