Bug Fix Commits

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <button type="button" class="btn btn-primary btn-sm" id="searchBtn">Search</button>
             </div>
             <!--Past Searches Box-->
-            <div class="pastSearched">
+            <div id="searchHistory">
                 <h3>Search History</h3>
                 <ul class="list-group list-group-flush">
                 </ul>
