--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 </head>
 
 <body>
-
-
-    <div class="jumbotron jumbotron-fluid">
-        <h1>Weather Dashboard</h1>
-    </div>
+    <header>Weather Dashboard</header>
     <!--Content Container-->
     <div class="container">
         <!--Search Bar and Past Searches-->
